--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.holder {
+	display: grid;
+	grid-template-columns: 100px 100px;
+	grid-template-rows: 100px 100px;
+		
+}
+
+.item {
+	width:200px;
+	height: 200px;
+	background-color: green;
+}
